Fixed warnings from FindBugs, mostly trivial.